@@ -1,5 +1,8 @@
 1.999817 Not Released
 
+ * Add new methods bdigitsum() and digitsum() to Math::BigInt. Add new method
+   _digitsum() to Math::BigInt::Lib.
+
  * Add new methods is_non_negative() and is_non_positive().
 
  * Extend the default collation sequence used by to_base() and from_base() to
